Create search and generateform, change index and profile

--- a/bonuscards/cards/templates/cards/profile.html
+++ b/bonuscards/cards/templates/cards/profile.html
@@ -20,6 +20,8 @@
     <br>
     <p><b>Статус:</b> {{card.status}}</p>
     <br>
-    <b>Остаток: </b> {{balance}}$
+    <p><b>Остаток:</b> {{card.balance}}</p>
+    <a href="{% url 'home' %}">
+        <button type="button" class="btn btn-primary btn-md">Назад</button></a>
 </div>
 {% endblock %}
