--- a/bonuscards/cards/templates/cards/index.html
+++ b/bonuscards/cards/templates/cards/index.html
@@ -7,10 +7,13 @@
     {{f}}
   {% endfor %}
   <button type="submit">Искать</button>
+  <a href="{% url 'home' %}">
+    <button type="button" class="btn btn-primary btn-md">Назад</button></a>
 </form>
 </div>
 <table style="text-align: center">
   <tbody>
+    <h1>Список бонусных карт</h1>
     <thead>
       <tr>
         <th width="20%">Серия</th>
@@ -31,5 +34,50 @@
     {% endfor %}
   </tbody>
 </table>
+</div>
+<div id="navigation" class="container my-4">
+  <div class="row-md-4">
+      <div class="mx-auto">
+          <nav aria-label="Page navigation example">
+              <ul class="pagination my-4">
+                  {% if cards.has_previous %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page= {{ cards.previous_page_number }}"
+                        aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                            <span class="sr-only">Предыдущая</span>
+                        </a>
+                    </li>
+                  {% endif %}
+                  {% for page in card.paginator.page_range %}
+                    {% if page == cards.number %}
+                        <li class="page-item active">
+                            <a class="page-link" href="#"> {{page}}
+                                <span class="sr-only">current</span>
+                            </a>
+                        </li>
+                    {% else %}
+                         <li class="page-item">
+                            <a class="page-link"
+                               href="?page={{page}}">
+                                {{page}}
+                            </a>
+                        </li>
+                    {% endif %}
+                  {% endfor %}
+                  {% if cards.has_next %}
+                    <li class="page-item">
+                        <a class="page-link"
+                           href="?page={{ cards.paginator.num_pages }}"
+                        aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                            <span class="sr-only">Следующая</span>
+                        </a>
+                    </li>
+
+                 {% endif %}
+              </ul>
+          </nav>
 
 {% endblock %}
+
